SP Screen ResDev (Partial)/src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrder18ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WorkOrder18ID</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>